testsuite/tests/properties/invalid_at/kwargs.lkt
import common

class BarNode: FooNode {
    @exported fun bar_prop(): Int = node.singleton()[index=12]
}
